--- a/about.html
+++ b/about.html
@@ -66,13 +66,12 @@
     <div class="container hero-content text-center">
         <p data-aos="fade-up" class="hero-subtitle">OUR STORY, OUR VISION</p>
         <h1 data-aos="fade-up" class="hero-title">About Us</h1>
-        <p data-aos="fade-up" data-aos-delay="200" class="hero-description">At Samdus Oil & Gas, we are committed to powering the future through innovation and sustainability. With cutting-edge technologies and a dedication to operational excellence, we strive to deliver energy solutions that meet the world’s evolving needs while ensuring a responsible and secure energy future.</p>
+        <p data-aos="fade-up" data-aos-delay="200" class="hero-description">At Samdus Oil & Gas, we are committed to powering the future through innovation and sustainability. With cutting-edge technologies and a dedication to operational excellence, we strive to deliver services that meet the world’s evolving needs while ensuring a responsible and secure energy future.</p>
     </div>
     <div class="scroll-indicator" data-aos="fade-down">
         <i class="fas fa-chevron-down"></i>
     </div>
 </section>
-
 
 
 <!-- Operational Excellence Section -->
@@ -88,7 +87,7 @@
                         <li><i class="fas fa-check-circle"></i> Real-Time Monitoring for Optimized Safety and Performance</li>
                         <li><i class="fas fa-check-circle"></i> Renewable Energy Integration for a Sustainable Future</li>
                     </ul>
-                    <a href="productoverview.html" class="btn  mt-4">Discover Our Services</a>
+                    <a href="productoverview.html" class="btn mt-4">Discover Our Services</a>
                 </div>
             </div>
             <div class="col-md-6 image-grid">
@@ -118,14 +117,12 @@
                     <h2>Sustainability Through Innovation</h2>
                     <p>Our commitment to sustainability is woven into every aspect of our operations. By utilizing green technologies and implementing rigorous environmental standards, we continuously strive to minimize our carbon footprint while enhancing operational performance. Samdus Oil & Gas is pioneering the future of energy with renewable energy solutions and eco-friendly technologies.</p>
                     <div class="stat-card" data-aos="fade-up" data-aos-delay="300">
-                       
-                       <strong> <p>Reduction in Operational Carbon Emissions</p></strong>
+                        <strong><p>Reduction in Operational Carbon Emissions</p></strong>
                     </div>
                     <div class="stat-card" data-aos="fade-up" data-aos-delay="500">
-                     
                         <strong><p>Waste Reduction Across All Projects</p></strong>
                     </div>
-                    <a href="" class="btn  mt-4">Learn More</a>
+                    <a href="" class="btn mt-4">Learn More</a>
                 </div>
             </div>
             <div class="col-md-6 image-grid">
@@ -176,6 +173,35 @@
                     <img src="static/images/oilvacuumsystem.jpg" alt="Community Protection" class="img-fluid rounded">
                     <div class="image-overlay">
                         <p class="image-caption">Protecting Our Communities</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Terms of Service Section -->
+<section class="terms-section">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-6 content-section">
+                <div class="content-box" data-aos="fade-left">
+                    <h2>Terms of Service</h2>
+                    <p>At Samdus Oil & Gas, we believe in providing transparent and responsible services. Our Terms of Service outline the expectations, responsibilities, and rights of both our company and our clients. By engaging with Samdus, you agree to our terms and conditions that ensure ethical and efficient service delivery in compliance with all applicable regulations.</p>
+                    <ul class="terms-list">
+                        <li><i class="fas fa-check-circle"></i> Fair and Transparent Business Practices</li>
+                        <li><i class="fas fa-check-circle"></i> Respect for Client Privacy and Data Protection</li>
+                        <li><i class="fas fa-check-circle"></i> Adherence to Industry Standards and Compliance</li>
+                        <li><i class="fas fa-check-circle"></i> Commitment to Customer Satisfaction</li>
+                    </ul>
+                    <a href="terms.html" class="btn mt-4">Read Full Terms</a>
+                </div>
+            </div>
+            <div class="col-md-6 image-grid">
+                <div class="image-card" data-aos="zoom-in">
+                    <img src="static/images/terms.jpg" alt="Terms of Service" class="img-fluid rounded">
+                    <div class="image-overlay">
+                        <p class="image-caption">Clear and Transparent Terms</p>
                     </div>
                 </div>
             </div>
