--- a/genbusprinc.html
+++ b/genbusprinc.html
@@ -86,7 +86,7 @@
                 </p>
             </div>
             <div class="image">
-                <img src="static/images/safety.webp" alt="Safety Principles">
+                <img src="static/images/safetyprin.webp" alt="Safety Principles">
             </div>
         </section>
         
