--- a/operationexe.html
+++ b/operationexe.html
@@ -177,6 +177,41 @@
         </div>
     </section>
 
+        <!-- Terms of Service Section -->
+        <section class="terms-section">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6 content-section">
+                    <div class="content-box" data-aos="fade-right">
+                        <h2>Terms of Service</h2>
+                        <p>
+                            At Samdus Oil & Gas, we are committed to delivering exceptional service while maintaining transparency and responsibility in all our business dealings. Our Terms of Service outline the expectations, rights, and responsibilities of both Samdus and our clients. We believe in fostering long-lasting partnerships based on mutual respect, clear communication, and shared goals.
+                        </p>
+                        <p>
+                            Our services are governed by these terms to ensure that all transactions are conducted with integrity and in compliance with applicable laws and regulations. We maintain a strict commitment to ethical business practices, safeguarding the interests of our clients while ensuring the highest standards of safety and efficiency in our operations.
+                        </p>
+                        <ul class="terms-list">
+                            <li><i class="fas fa-check-circle"></i> Transparent and Fair Business Practices</li>
+                            <li><i class="fas fa-check-circle"></i> Clear Communication and Timely Updates</li>
+                            <li><i class="fas fa-check-circle"></i> Commitment to Client Privacy and Data Protection</li>
+                            <li><i class="fas fa-check-circle"></i> Adherence to Local and International Compliance Standards</li>
+                        </ul>
+                        <button class="btn mt-4">Read Full Terms</button>
+                    </div>
+                </div>
+                <div class="col-md-6 image-grid">
+                    <div class="image-card-large" data-aos="zoom-in">
+                        <img src="static/images/terms.jpg" alt="Terms of Service" class="img-fluid rounded">
+                        <div class="image-overlay">
+                            <p class="image-caption">Clear and Transparent Terms</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
+
+
     <!-- Call to Action Section -->
     <section class="cta-section text-center">
         <div class="container" data-aos="fade-up">
