--- a/operationexe.html
+++ b/operationexe.html
@@ -196,7 +196,7 @@
                             <li><i class="fas fa-check-circle"></i> Commitment to Client Privacy and Data Protection</li>
                             <li><i class="fas fa-check-circle"></i> Adherence to Local and International Compliance Standards</li>
                         </ul>
-                        <button class="btn mt-4">Read Full Terms</button>
+                        <a href="terms.html" class="btn mt-4">Read Full Terms</a>
                     </div>
                 </div>
                 <div class="col-md-6 image-grid">
