--- a/procurement.html
+++ b/procurement.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="genbusprinc.html">General Business Principles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productoverview.html">Products</a>
+                        <a class="nav-link" href="productoverview.html">Equipments</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
