--- a/consultancy.html
+++ b/consultancy.html
@@ -124,12 +124,14 @@
         </div>
     </section>
 
-    <!-- Benefits Section -->
     <section class="benefits-section py-5">
-        <div class="container fade-in ">
+        <div class="container fade-in">
             <h2 class="text-center mb-5">The Samdus Consultancy Advantage</h2>
-            <div class="row">
-                <div class="col-md- fade-in">
+            <div class="row align-items-center">
+                <div class="col-md-6 img2 fade-in order-md-1 order-2">
+                    <img src="static/images/deploy2.jpg" alt="Risk Reduction" class="img-fluid rounded shadow-lg">
+                </div>
+                <div class="col-md-6 fade-in order-md-2 order-1">
                     <ul class="list-benefits">
                         <li><strong>Industry Expertise:</strong> Benefit from decades of experience in oil spill management and environmental protection.</li>
                         <li><strong>Tailored Solutions:</strong> Each consultancy service is designed to meet the specific challenges of your operations.</li>
@@ -137,12 +139,10 @@
                         <li><strong>Risk Reduction:</strong> Our strategic planning helps reduce the risk of operational disruption and environmental damage.</li>
                     </ul>
                 </div>
-                <div class="col-md-6 img2 fade-in">
-                    <img src="static/images/deploy2.jpg" alt="Risk Reduction" class="img-fluid rounded shadow-lg">
-                </div>
             </div>
         </div>
     </section>
+    
 
     <!-- Call to Action Section -->
     <section class="cta-section text-white">
